test/tests/stages/18_structures/invalid_types/scalar_required/cast_to_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CCast: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
